--- a/views/admin_settings.ejs
+++ b/views/admin_settings.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Панель администратора</title>
+    <title>Настройки</title>
     <link rel="stylesheet" href="/css/admin.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   </head>
-  <body>
+  <body style="background-image: none;">
 	<!--<div id="particles-js"></div>
 	<script src="/js/particles.js"></script>
 	<script src="/js/app.js"></script>-->
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/admin/requests" class="active">
+                    <a href="/admin/requests">
                         <span class="icon"><i class="fas fa-desktop"></i></span>
                         <span class="item">Заявки</span>
                     </a>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/admin/settings">
+                    <a href="/admin/settings" class="active">
                         <span class="icon"><i class="fas fa-cog"></i></span>
                         <span class="item">Настройки</span>
                     </a>
@@ -48,28 +48,33 @@
             </ul>
         </div>
     </div>
-	<div class="welcome-text" style="top:7%;">
-		<h1>Список заявок</h1>
-	</div>
-    <div class="requests-field">
-        <% requests.forEach((req) => { %>
-                <div class="request" onclick="location.href='/admin/requests/<%= req.id %>'">
-                <p class="request-number">Заявка №<%= req.id %></p>
-                <p class="request-status">Статус:</p>
-                <% if ( req.status == 0 ) { %>
-                    <p class="request-status" style="color: #3bc051;">Свободна</p>
-                <% } else { %>
-                    <% if ( req.status == -1 ) { %>  
-                        <p class="request-status" style="color: #313131;">Завершена</p>
-                    <% } else { %>
-                        <p class="request-status" style="color: #c0913b;">В работе у <%= users[req.status].name %></p>
-                    <% } %>
-                <% } %>
-                <p class="request-text"><%= req.text %></p>
-                <p class="request-date"><%= req.date %></p>
-                <p class="request-user">Пользователь: <%= req.user %></p>
-            </div>
-        <% }) %>
+    <div class="settings-menu">
+        <div class="settings-header">
+            <p>Настройки профиля</p>
+        </div>
+        <div class="settings-body">
+            <p>Картинка профиля: </p>
+            <img src="<%= user.profile_picture %>" alt="profile_picture">
+            <form action="/admin/settings/save_picture" method="POST">
+                <p style="display: inline-block; width: 25%;" >Ссылка на другую картинку:</p>
+                <input type="url" name="link" value="" style="width: 50%" placeholder="https://example.com/exampleimage.jpg" required>
+                <button type="submit" style="margin-top: 0px;"> Изменить картинку профиля </button>
+            </form>
+            <p style="color: red; width: 50%"><%= picture_error %></p>
+            <hr>
+            <form action="/admin/settings/save" method="POST">
+                <p style="display: inline-block;">Имя пользователя: </p>
+                <input type="text" name="name" value="<%= user.name %>" required>
+                <hr>
+                <p style="display: inline-block;">Пароль: </p>
+                <input type="password" name="password" value="<%= user.password %>" required>
+                <hr>
+                <button type="submit"> Сохранить изменения </button>
+            </form>
+            <form action="/logout" method="POST">
+            <button type="submit" class="logout-button"> Выйти из аккаунта </button>
+            </form>
+        </div>
     </div>
   </body>
 </html>
